--- a/webapp/view/View1.view.xml
+++ b/webapp/view/View1.view.xml
@@ -1,66 +1,40 @@
 <mvc:View controllerName="zov.controller.View1"
     xmlns:mvc="sap.ui.core.mvc" displayBlock="true"
     xmlns:core="sap.ui.core"
-    xmlns:f="sap.ui.layout.form"
+    xmlns:t="sap.ui.table"
     xmlns="sap.m">
-    <Page id="page" title="{i18n>title}" >
-  <Button text="Hello Word" press="onPress"/>
-    <f:Form id="FormChange354" editable="true">
-         <f:title>
-         <core:Title text="{i18n>Calculator}"></core:Title>
-         </f:title> 
-         <f:layout>
-         <f:ResponsiveGridLayout 
-         labelSpanXL="3"
-         labelSpanL="3"
-         labelSpanM="3"
-         labelSpanS="12"
-         adjustLabelSpan="false"
-         emptySpanXL="4"
-         emptySpanL="4"
-         emptySpanM="4"
-        emptySpanS="0"
-        columnsXL="1"
-        columnsL="1"
-        columnsM="1"
-        singleContainerFullSize="false"/>
-         </f:layout>
-     <f:formContainers>
-                <f:FormContainer>
-                    <f:formElements>
-                        <f:FormElement label="1º Bimestre">
-                            <f:fields>
-                                <Input value="" id="b1"/>
-                            </f:fields>
-                        </f:FormElement>
-                        <f:FormElement label="2º Bimestre">
-                            <f:fields>
-                                <Input value="" id="b2"/>
-                            </f:fields>
-                        </f:FormElement>
-                        <f:FormElement label="3º Bimestre">
-                            <f:fields>
-                                <Input value="" id="b3"/>
-                            </f:fields>
-                        </f:FormElement>
-                        <f:FormElement label="4º Bimestre">
-                            <f:fields>
-                                <Input value="" id="b4"/>
-                            </f:fields>
-                        </f:FormElement>
-                        <f:FormElement label="Resultado">
-                            <f:fields>
-                                <Input value="" id="resultado" editable="false"/>
-                            </f:fields>
-                        </f:FormElement>
-                        <f:FormElement label="">
-                            <f:fields>
-                                <Button text="Calcular" press="onCalcular"/>
-                            </f:fields>
-                        </f:FormElement>
-                    </f:formElements>
-                </f:FormContainer>
-            </f:formContainers>    
-    </f:Form>
+ <Page id="page" title="{i18n>title}">
+      <VBox class="sapUiTinyMargin">
+        <Label text="Model padrão da view (origem: controller)"/>
+        <Text text="{/usuario/nome}"/>
+
+            <Text text="--------------------------------------------------"/>
+
+        <Label text="Model 'dados' da view (origem: controller)"/>
+        <Text text="{dados>/usuario/nome}"/>
+
+        <Text text="--------------------------------------------------"/>
+        
+                 <Label text="Model i18n - chave title (origem: manifest)"/>
+        <Text text="{i18n>title}"/>
+
+            <Text text="--------------------------------------------------"/>
+
+        <Label text="Model 'usuarios' (origem: manifest)"/>
+        <Text text="{usuarios>/0/id} - {usuarios>/0/nome}"/>
+
+        <Text text="--------------------------------------------------"/>
+        
+        <Label text="Model padrão do serviço (origem: manifest)"/>
+        <List headerText="{i18n>customerOrder}" items="{ path: '/OVCabSet' }" >
+          <StandardListItem title="{i18n>customerOrder} {OrdemId}" description="{ClienteId}"/>
+        </List>
+
+        <Text text="{/OVCabSet(1)/OrdemId} - {/OVCabSet(1)/CriadoPor} - {OVCabSet(1)/ClienteId}"/>
+
+        <Text text="--------------------------------------------------"/>
+
+        <Button text="Testar Models" press="onTestModels"/>
+      </VBox>
     </Page>
 </mvc:View>
