--- a/webapp/view/CustomerFormView.view.xml
+++ b/webapp/view/CustomerFormView.view.xml
@@ -1,4 +1,4 @@
-<mvc:View controllerName="zov.controller.CustomerFormView"
+<!-- <mvc:View controllerName="zov.controller.CustomerFormView"
     xmlns:mvc="sap.ui.core.mvc" displayBlock="true" 
     xmlns:core="sap.ui.core"
     xmlns:t="sap.ui.table"
@@ -10,4 +10,4 @@
         <Button text="Voltar para View1" press="onView1"/>
       </VBox>
     </Page>
-</mvc:View>
+</mvc:View>-->
